test-data/unit/check-assert-type-fail.test
[case testAssertTypeFail1]
import typing
import array as arr
class array:
    pass
def f(si: arr.array[int]):
    typing.assert_type(si, array) # E: Expression is of type "array.array[int]", not "__main__.array"
[builtins fixtures/tuple.pyi]

[case testAssertTypeFail2]
import typing
import array as arr
class array:
    class array:
        i = 1
def f(si: arr.array[int]):
    typing.assert_type(si, array.array) # E: Expression is of type "array.array[int]", not "__main__.array.array"
[builtins fixtures/tuple.pyi]

[case testAssertTypeFail3]
import typing
import array as arr
class array:
    class array:
        i = 1
def f(si: arr.array[int]):
    typing.assert_type(si, int) # E: Expression is of type "array[int]", not "int"
[builtins fixtures/tuple.pyi]
